# Licente_IDF_implement

./: Read_me  for_servo
Template_March/components/ViTAL/: component.mk  index.html
Template_March/components/ViTAL/ASW/Ambient_Light/: ambient_light.c
Template_March/components/ViTAL/ASW/Climate_Control_System/: climate_control_system.c
Template_March/components/ViTAL/ASW/Headlights/: headlights.c
Template_March/components/ViTAL/ASW/Horn/: horn.c
Template_March/components/ViTAL/ASW/Locking_System/: locking_system.c
Template_March/components/ViTAL/ASW/Run_Movements/: run_movement.c
Template_March/components/ViTAL/ASW/Trunk/: trunk.c
Template_March/components/ViTAL/ASW/Write_movements/: write_movements.c
Template_March/components/ViTAL/BSW/HAL/Com/: com.c
Template_March/components/ViTAL/RTE/: rte.c
Template_March/components/ViTAL/SRVL/SCHEDULER/: scheduler.c
Template_March/components/ViTAL/include/RTE/: rte.h
Template_March/main/: CMakeLists.txt
To_Do_List/: ToDo.xlsx
ViTAL_L1_L13/ViTAL_BSW_Complete/: read
ViTAL_L1_L13/ViTAL_BSW_Complete/components/MASTER/: component.mk  index.html
ViTAL_L1_L13/ViTAL_BSW_Complete/components/MASTER/RTE/: rte.c
ViTAL_L1_L13/ViTAL_BSW_Complete/components/ViTAL/: index.html
ViTAL_L1_L13/ViTAL_BSW_Complete/components/ViTAL/RTE/: rte.c
ViTAL_L1_L13/ViTAL_BSW_Complete/main/: main.c
ViTAL_L1_L13/ViTAL_BSW_Complete/main/include/: global.h
workspace/Template_March/components/ViTAL/: CMakeLists.txt  index.html
workspace/Template_March/components/ViTAL/RTE/: rte.c
workspace/Template_March/main/include/: global.h
workspace/ViTAL_template/components/ViTAL/: index.html
workspace/ViTAL_template/main/: CMakeLists.txt
workspace/ViTAL_template/main/include/: global.h
workspace/template/: sdkconfig
workspace/template/components/ViTAL/RTE/: rte.c
workspace/template/main/: main.c
(+142 files in other folders)
